--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
             "email": "263021000@qq.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+	"version":"1.0.0",
     "require": {
         "php": ">=5.4.0"
     },
